Progress on: 112593: Problems found by FindBugs https://bugs.eclipse.org/bugs/show_bug.cgi?id=112593